# System-Software-lab5

./: CMakeLists.txt  README.md  commands.c  commands.h  lines.c  lines.h  linesnew.c  linesnew.h  more.c  more.h  p1mmap_client.c  p1mmap_client.h  p1msgq_client.c  p1msgq_client.h  p1shm_client.c  p1shm_client.h  part10fork.c  part10fork.h  part1serv.c  part1serv.h  part4.c  part4.h  part5.c  part5.h  part6.c  part6.h  part7.c  part7.h  part8_client_uds.c  part8_client_uds.h  part8_serv_uds.c  part8_serv_uds.h  part9_sig_serv.c  part9_sig_serv.h  positions.c  positions.h  term_in.c  term_in.h  term_out.c  term_out.h
